# speech2prompt

./: .gitignore  AGENTS.md  BUG_ANALYSIS_AND_FIXES.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  NOTICE  PHASE9_COMPLETE.md  PHASE9_QUICK_REFERENCE.md  QUICKSTART.md  README.md  RELEASE.md  SPECIFICATION.md  install-deps.sh  run-speech2prompt.sh
.github/: IMPLEMENTATION_SUMMARY.md  SETUP_CHECKLIST.md
.github/scripts/: update-version.sh
.github/workflows/: README.md  release.yml
android/: README.md  pubspec.yaml
android/android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/android/app/: build.gradle  build.gradle.kts  generate-keystore-for-ci.sh  proguard-rules.pro
android/android/gradle/: libs.versions.toml
android/docs/native-rewrite/: 00-OVERVIEW.md  01-PROJECT-SETUP.md  02-DATA-MODELS.md  03-CRYPTOGRAPHY.md  04-BLE-PACKETS.md  05-BLE-SERVICE.md  06-SPEECH-SERVICE.md  07-PERMISSIONS.md  08-THEME-DESIGN.md  09-UI-COMPONENTS.md  10-HOME-SCREEN.md  11-CONNECTION-SCREEN.md  12-SETTINGS-SCREEN.md  13-NAVIGATION-DI.md  14-TEST-SCREENS.md  15-INTEGRATION.md  ARCHITECTURE.md  DEPENDENCIES.md  PHASE-5-SUMMARY.md  PHASE-8-VIEWMODELS-SUMMARY.md  README.md  VERIFICATION-CHECKLIST.md  VIEWMODELS-USAGE-GUIDE.md
android/lib/: main.dart
android/lib/models/: audio_level.dart  ble_device.dart  bluetooth_device.dart  connection_state.dart  message.dart  models.dart  voice_command.dart
android/lib/screens/: bluetooth_test_screen.dart  connection_screen.dart  home_screen.dart  settings_screen.dart  speech_test_screen.dart
android/lib/services/: ble_service.dart  bluetooth_service.dart  command_processor.dart  permission_service.dart  secure_storage_service.dart  speech_service.dart
android/lib/utils/: ble_constants.dart  constants.dart  encryption.dart  packet_assembler.dart  utils.dart
android/lib/widgets/: widgets.dart  (+3 more)
android/scripts/: build-release.sh  generate-keystore.sh
android/test/: encryption_test.dart  widget_test.dart
desktop/: Cargo.toml  README.md
desktop/appimage/: AppImageBuilder.yml  build-appimage.sh
desktop/packaging/deb/DEBIAN/: control  postinst  prerm
desktop/packaging/rpm/: speech2code.spec  speech2prompt.spec
desktop/resources/: speech2code.desktop  speech2code.service  speech2prompt.desktop  speech2prompt.service
desktop/scripts/: generate-icons.sh  install.sh  uninstall.sh
desktop/src/: config.rs  events.rs  lib.rs  main.rs  pairing.rs  state.rs
desktop/src/bluetooth/: ble_constants.rs  connection.rs  gatt_server.rs  mod.rs  protocol.rs  reassembler.rs  server.rs
desktop/src/commands/: matcher.rs  mod.rs  word_buffer.rs
desktop/src/config/: mod.rs
desktop/src/crypto/: ecdh.rs  mod.rs
desktop/src/input/: injector.rs  keys.rs  mod.rs  wayland.rs  x11.rs
desktop/src/storage/: history.rs  mod.rs  secure.rs  voice_commands.rs
desktop/src/ui/: confirmation_dialog.rs  history_window.rs  manage_commands.rs  mod.rs  pin_dialog.rs  tray.rs
desktop/tests/: integration_test.rs
docs/phases/: 01-project-setup.md  02-protocol-implementation.md  03-linux-bluetooth-server.md  04-linux-text-injection.md  05-linux-ui.md  06-android-speech-recognition.md  07-android-bluetooth-client.md  08-android-ui.md  09-integration-security.md  10-packaging-deployment.md
protocol/: PROTOCOL.md
scripts/: test_e2e.sh
(+75 files in other folders)
