[package]
name = "speech2code-desktop"
version = "0.1.2"
edition = "2021"
authors = ["Speech2Code Team"]
description = "Linux desktop companion for Speech2Code voice-to-keyboard bridge"
license = "Apache-2.0"
repository = "https://github.com/yourusername/speech2code"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Bluetooth
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }
uuid = { version = "1.6", features = ["v4"] }

# GUI
gtk4 = "0.7"
libadwaita = "0.5"
glib = "0.18"

# System tray
ksni = "0.2"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
base64 = "0.21"
hex = "0.4"

# Utilities
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# State management
parking_lot = "0.12"

# Input simulation
enigo = "0.1"

# For ydotool communication
tokio-process = "0.2"

# X11 detection
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

# Async channels
async-channel = "2.1"

# Async utilities
futures = "0.3"
pin-project-lite = "0.2"

[features]
default = ["x11"]
x11 = ["x11rb"]
wayland = []

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "test_input"
path = "src/bin/test_input.rs"
